--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,9 @@ body {
   .inputField {
     @apply col-span-1 border rounded-full shadow-none outline-none sm:col-span-1 focus:shadow-none border-section-border focus:border-sideBar-toggle;
   }
+  .inputFieldLabel {
+    @apply text-black opacity-100;
+  }
   .switcher {
     @apply mt-4 rounded-full outline-none h-9 border-section-border hover:border-sideBar-toggle text-main-shadow sm:mt-0;
   }
@@ -26,6 +29,11 @@ body {
     @apply w-full px-4 py-3 border rounded-full outline-none border-section-border outline-offset-0 outline-1 focus:outline-sideBar-toggle text-main-shadow h-9;
   }
 }
+
+/* label {
+  font-size: 15px;
+  font-weight: 500;
+} */
 
 .outlet-outer-wrapper::-webkit-scrollbar {
   width: 8px;
