--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,8 @@ body {
   border-radius: 5px;
   transition: height 0.5s;
 }
+
+.billOfMaterials tr {
+  box-shadow: none;
+  background-color: transparent;
+}
